syntax = "proto3";

package textembedding;

option go_package = "./protos/gen/v1;v1";

service TextEmbeddingsService {
  rpc Embed(EmbedRequest) returns (EmbedResponse);
  rpc EmbedAll(EmbedAllRequest) returns (EmbedAllResponse);
  rpc EmbedSparse(EmbedSparseRequest) returns (EmbedSparseResponse);
  rpc CalculateSimilarity(SimilarityRequest) returns (SimilarityResponse);
}

enum TruncationDirection {
  TRUNCATION_DIRECTION_UNSPECIFIED = 0;
  TRUNCATION_DIRECTION_LEFT = 1;
  TRUNCATION_DIRECTION_RIGHT = 2;
}

enum EncodingFormat {
  ENCODING_FORMAT_UNSPECIFIED = 0;
  ENCODING_FORMAT_FLOAT = 1;
  ENCODING_FORMAT_BASE64 = 2;
}

message EmbedRequest {
  repeated string inputs = 1;
  optional bool normalize = 2;
  optional string prompt_name = 3;
  optional bool truncate = 4;
  optional TruncationDirection truncation_direction = 5;
}

message EmbedResponse {
  repeated Embedding embeddings = 1;
}

message Embedding {
  repeated float values = 1;
}

message EmbedAllRequest {
  repeated string inputs = 1;
  optional string prompt_name = 2;
  optional bool truncate = 3;
  optional TruncationDirection truncation_direction = 4;
}

message EmbedAllResponse {
  repeated TokenEmbeddings token_embeddings = 1;
}

message TokenEmbeddings {
  repeated Embedding embeddings = 1;
}

message EmbedSparseRequest {
  repeated string inputs = 1;
  optional string prompt_name = 2;
  optional bool truncate = 3;
  optional TruncationDirection truncation_direction = 4;
}

message EmbedSparseResponse {
  repeated SparseEmbedding sparse_embeddings = 1;
}

message SparseEmbedding {
  repeated SparseValue values = 1;
}

message SparseValue {
  uint32 index = 1;
  float value = 2;
}

// Similarity operations

message SimilarityRequest {
  string source_sentence = 1;
  repeated string sentences = 2;
  optional SimilarityParameters parameters = 3;
}

message SimilarityParameters {
  optional string prompt_name = 1;
  optional bool truncate = 2;
  optional TruncationDirection truncation_direction = 3;
}

message SimilarityResponse {
  repeated float similarities = 1;
}